// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper component should change active step when click on any step 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  text-transform: uppercase;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c3 {
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  overflow: hidden;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background: #012040;
}

.c3 .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #ffffff;
  line-height: 30px;
  font-size: 1.4rem;
}

.c3 + .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 2.2rem;
  font-size: 1.4rem;
  color: #012040;
}

.c7 {
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  overflow: hidden;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background: #C7D0D8;
}

.c7 .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #ffffff;
  line-height: 30px;
  font-size: 1.4rem;
}

.c7 + .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 2.2rem;
  font-size: 1.4rem;
  color: #C7D0D8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 20px;
}

.c1 .c2 {
  margin-right: 10px;
}

.c1 * {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <strong
          class="c4 c5"
        >
          1
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Customer Information
      </strong>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c7"
      >
        <strong
          class="c4 c5"
        >
          2
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Payment information
      </strong>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c7"
      >
        <strong
          class="c4 c5"
        >
          3
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Booking is confirmed!
      </strong>
    </div>
  </div>
</div>
`;

exports[`Stepper component should render correctly with all the default props 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  text-transform: uppercase;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c3 {
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  overflow: hidden;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background: #012040;
}

.c3 .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #ffffff;
  line-height: 30px;
  font-size: 1.4rem;
}

.c3 + .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 2.2rem;
  font-size: 1.4rem;
  color: #012040;
}

.c7 {
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  overflow: hidden;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background: #C7D0D8;
}

.c7 .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #ffffff;
  line-height: 30px;
  font-size: 1.4rem;
}

.c7 + .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 2.2rem;
  font-size: 1.4rem;
  color: #C7D0D8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 20px;
}

.c1 .c2 {
  margin-right: 10px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <strong
          class="c4 c5"
        >
          1
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Customer Information
      </strong>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c7"
      >
        <strong
          class="c4 c5"
        >
          2
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Payment information
      </strong>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c7"
      >
        <strong
          class="c4 c5"
        >
          3
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Booking is confirmed!
      </strong>
    </div>
  </div>
</div>
`;

exports[`Stepper component should render correctly with all the props given 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  text-transform: uppercase;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c3 {
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  overflow: hidden;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background: #012040;
}

.c3 .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #ffffff;
  line-height: 30px;
  font-size: 1.4rem;
}

.c3 + .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 2.2rem;
  font-size: 1.4rem;
  color: #012040;
}

.c7 {
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  overflow: hidden;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background: #C7D0D8;
}

.c7 .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #ffffff;
  line-height: 30px;
  font-size: 1.4rem;
}

.c7 + .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 2.2rem;
  font-size: 1.4rem;
  color: #C7D0D8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 20px;
}

.c1 .c2 {
  margin-right: 10px;
}

.c1 * {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <strong
          class="c4 c5"
        >
          1
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Customer Information
      </strong>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c7"
      >
        <strong
          class="c4 c5"
        >
          2
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Payment information
      </strong>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c7"
      >
        <strong
          class="c4 c5"
        >
          3
        </strong>
      </div>
      <strong
        class="c4 c6"
      >
        Booking is confirmed!
      </strong>
    </div>
  </div>
</div>
`;
